<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.motion.widget.MotionLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue_start"
    tools:context=".MainActivity"
    app:layoutDescription="@xml/activity_main_scene">


    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/circle_Image2"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:visibility="invisible"
        android:background="@color/blue_start"
        android:src="@drawable/image"
        android:scaleType="fitXY"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/back_Icon"
        />
    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/back_Icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:src="@drawable/baseline_arrow_back_24"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/icon_More"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:src="@drawable/baseline_more_vert_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/circle_Image"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginStart="16dp"
        android:background="@color/blue_start"
        android:src="@drawable/image"
        app:shapeAppearanceOverlay="@style/styleImage"
        app:layout_constraintTop_toBottomOf="@id/back_Icon"
        />

    <TextView
        android:id="@+id/textName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/the_chance"
        android:textColor="@color/white"
        android:textSize="@dimen/textSize_View"
        android:layout_margin="12dp"
        app:layout_constraintBottom_toBottomOf="@id/circle_Image"
        app:layout_constraintStart_toEndOf="@+id/circle_Image"
        app:layout_constraintTop_toTopOf="@id/circle_Image" />

    <TextView
        android:id="@+id/subText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_818_subscribers"
        android:textColor="@color/light"
        app:layout_constraintStart_toStartOf="@+id/textName"
        app:layout_constraintTop_toBottomOf="@+id/textName"   />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/card_One"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:paddingHorizontal="16dp"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/subText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">
        
        <TextView
            android:id="@+id/textInfo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/info"
            android:textSize="12sp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="12dp"
            android:textColor="@color/blue_start"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>



        <TextView
            android:id="@+id/textLink"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/t_me_thechance101"
            android:textSize="18sp"
            android:layout_marginTop="12dp"
            android:textColor="@color/material_on_surface_emphasis_high_type"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textInfo"/>

        <TextView
            android:id="@+id/textLink2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/invite_link"
            android:textSize="12sp"
            android:layout_marginTop="4dp"
            android:textColor="@color/gray"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textLink"/>

        <com.google.android.material.imageview.ShapeableImageView
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:src="@drawable/link"
            android:layout_marginTop="12dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />



    </androidx.constraintlayout.widget.ConstraintLayout>

    <View
        android:id="@+id/line"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/card_One"
        android:background="@color/lineColor"
       />


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/card_Two"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:paddingHorizontal="16dp"
        app:layout_constraintTop_toBottomOf="@id/line"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">



        <TextView
            android:id="@+id/notification"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/notification"
            android:textSize="18sp"
            android:layout_marginTop="12dp"
            android:textColor="@color/material_on_surface_emphasis_high_type"
            app:layout_constraintStart_toStartOf="parent"
           app:layout_constraintTop_toTopOf="parent"/>

        <TextView
            android:id="@+id/off"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/off"
            android:textSize="12sp"
            android:layout_marginTop="4dp"
            android:textColor="@color/gray"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/notification"/>

        <androidx.appcompat.widget.SwitchCompat
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <View
        android:id="@+id/line2"
        android:layout_width="match_parent"
        android:layout_height="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/card_Two"
        android:background="@color/lineColor"
       />
    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/dataLiner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:background="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/line2">

        <TextView
            android:id="@+id/media"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/media"
            android:textSize="16sp"
            android:gravity="center"
            android:layout_weight="1"
            android:textColor="@color/blue_start"/>


        <TextView
            android:id="@+id/files"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/files"
            android:gravity="center"
            android:textSize="16sp"
            android:layout_weight="1"
            android:textColor="@color/gray"/>

        <TextView
            android:id="@+id/links"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/links"
            android:gravity="center"
            android:textSize="16sp"
            android:layout_weight="1"
            android:textColor="@color/gray"/>


    </androidx.appcompat.widget.LinearLayoutCompat>

<androidx.appcompat.widget.LinearLayoutCompat
    android:id="@+id/fatherLinear"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@color/white"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintTop_toBottomOf="@id/dataLiner"
    >

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
       <com.google.android.material.imageview.ShapeableImageView
           android:layout_width="150dp"
           android:layout_height="150dp"
           android:src="@drawable/image"
           android:layout_weight="1"
           />
        <com.google.android.material.imageview.ShapeableImageView
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:src="@drawable/image"
            android:layout_weight="1"
            />
        <com.google.android.material.imageview.ShapeableImageView
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:src="@drawable/image"
            android:layout_weight="1"
            />

    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
        <com.google.android.material.imageview.ShapeableImageView
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:src="@drawable/image"
            android:layout_weight="1"
            />
        <com.google.android.material.imageview.ShapeableImageView
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:src="@drawable/image"
            android:layout_weight="1"
            />
        <com.google.android.material.imageview.ShapeableImageView
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:src="@drawable/image"
            android:layout_weight="1"
            />



    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
        <com.google.android.material.imageview.ShapeableImageView
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:src="@drawable/image"
            android:layout_weight="1"
            />
        <com.google.android.material.imageview.ShapeableImageView
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:src="@drawable/image"
            android:layout_weight="1"
            />
        <com.google.android.material.imageview.ShapeableImageView
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:src="@drawable/image"
            android:layout_weight="1"
            />

    </androidx.appcompat.widget.LinearLayoutCompat>

</androidx.appcompat.widget.LinearLayoutCompat>

</androidx.constraintlayout.motion.widget.MotionLayout>